[package]
name="plantrack"
version="0.1.3"
edition="2021"

[dependencies]
chrono = { version = "0.4.38", features = [ "serde" ] }
chrono-tz = "0.10.0"
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
ics = "0.5.8"
itertools = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
uuid = { version = "1.11.0", features = [ "v4" ] }
xdg = "2.5.2"
